--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-mynders-app",
-  "version": "1.0.9",
+  "version": "1.0.12",
   "description": "Boilerplate for creating a new Mynders app",
   "main": "index.js",
   "type": "module",
@@ -13,6 +13,7 @@
     "create-mynders-app": "./index.js"
   },
   "dependencies": {
+    "camelcase": "^8.0.0",
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^9.2.15"
