--- a/new-app-files/package.json
+++ b/new-app-files/package.json
@@ -16,22 +16,21 @@
     "@types/react-dom": "^18.2.20",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
-    "mynders": "^1.0.15",
+    "mynders": "^1.0.30",
     "postcss": "^8.4.35",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-css-injected-by-js": "^3.4.0"
   },
   "dependencies": {
-    "react-modern-drawer": "^1.2.2",
-    "vite-plugin-css-injected-by-js": "^3.4.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "mynders": "^1.0.15",
+    "mynders": ">=1.0.30",
     "tailwindcss": "^3.4.1"
   }
 }
