--- a/new-app-files/package.json
+++ b/new-app-files/package.json
@@ -20,13 +20,13 @@
     "postcss": "^8.4.35",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "react-modern-drawer": "^1.2.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-css-injected-by-js": "^3.4.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
