--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-mynders-app",
-  "version": "1.0.16",
-  "description": "Boilerplate for creating a new Mynders app",
+  "version": "1.0.18",
+  "description": "Boilerplate for creating a new Mynders plugin",
   "main": "index.js",
   "type": "module",
   "scripts": {
